--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "alx-low_programming" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "alx-low_programming" ]
 
 jobs:
   build:
